[package]
name = "rust_crypto"
version = "0.1.0"
authors = ["Vit Pankin"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes-soft = "0.6"
chacha20poly1305 = "0.7"
rsa = "0.9.2"
wasm-bindgen = "0.2"
rand = "0.8"
getrandom = { version = "0.2.10", features = ["js"] }
pkcs1 = "0.7.5"

[frame-benchmarking]
optional = false